# Solarsystem-opengl

./: CMakeLists.txt
Solarsysytem/: CMakeLists.txt
Solarsysytem/src/: app.cpp  layerStack.cc  renderer.cpp  renderer.hh  shader.cc  shader.hh  shape.cc  vertex.cc  vertexBuffer.cc  window.cc
Solarsysytem/src/include/: layer.hh  layerStack.hh  renderer.hh  shader.hh  shape.hh  vertex.hh  vertexBuffer.hh  window.hh
assests/shader/: simple.frag  simple.vert
